chore: overflow x bug fix test 1

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -38,7 +38,7 @@ footer {
     align-items: center;
     width: 100%;
     height: 10vh;
-    padding: 12px;
+    padding-top: 12px;
     background-color: #111111;
     color: white;
     z-index: 9;
